# UseWinDll

./: CMakeLists.txt  Makefile  MinGW_Cmake.bat  main.cpp
CreateDll/: CMakeLists.txt  Makefile  imegalib.h  main.cpp  mega2lib.cpp  mega2lib.h
lib/: CMakeLists.txt  imegalib.h
